# robot_firmware

./: .gitattributes  .gitignore  .gitmodules  .specify_plan.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FreeRTOS_Kernel_import.cmake  Makefile  PINMAP.md  QUICK_REFERENCE.md  README.md  README_1.md  analyze_odometry.py  architecture_and_packages.md  create_release.sh  eigen_import.cmake  imu_verification_guide.md  install.md  micro_ros.cmake  monitor_health.sh  next_steps.md  pico_sdk_import.cmake  setup_libs.sh  test_firmware_topics.sh  test_motor_control.sh  verify_imu_publishing.sh
.old/firmware/mecabridge_pico/: CMakeLists.txt
.old/firmware/mecabridge_pico/src/: config.h  encoder_reader.cpp  main.cpp  micro_ros_support.cpp
.old/firmware/mecabridge_pico/tests/: CMakeLists.txt  test_placeholder.cpp
.old/lpico/: .gitignore  .gitkeep  CMakeLists.txt  README.md
.old/lpico/include/: encoder_reader.h  motor_driver.h  pwm_control.h  watchdog_manager.h
.old/lpico/src/: pwm_control.c  shooter_control.c
lpico/: .clang-format  .cpplintignore  .gitignore  CMakeLists.txt  README.md  micro_ros_pico_sdk_import.cmake  platformio.ini
lpico/include/: config.h  control_loop.h  motor_types.h  motors.h  shooter_control.h  shooter_types.h  system_config.h  usb_interface.h
lpico/src/: command_processor.c  control_loop.c  encoder_reader.c  hal_compat.c  interrupts.c  main.c  main.cpp  micro_ros_cfg.cpp  motor_driver.c  pwm_control.c  safety.c  shooter_control.c  usb_interface.c  watchdog_manager.c
micro_ros_raspberrypi_pico_sdk/: .gitignore  CMakeLists.txt  Makefile  Projekt.md  TODO.md  built_packages  package.xml  robot_firmware_pico_port_plan.md
micro_ros_raspberrypi_pico_sdk/.gemini/: settings.json
micro_ros_raspberrypi_pico_sdk/.github/: copilot-instructions.md
micro_ros_raspberrypi_pico_sdk/.specify/memory/: constitution.md
micro_ros_raspberrypi_pico_sdk/.specify/templates/: plan-template.md
micro_ros_raspberrypi_pico_sdk/include/application/: shooter_control.h  watchdog_manager.h
micro_ros_raspberrypi_pico_sdk/include/hardware/: ImuLib_cfg.h  UartLib.h  bsp.h  config.h  motors.h
micro_ros_raspberrypi_pico_sdk/include/middleware/: command_processor.h  control_loop.h  micro_ros_arduino.h  micro_ros_cfg.h
micro_ros_raspberrypi_pico_sdk/include/shared/: hardware_cfg.h  imu_types.h  launcher_state.h  motor_controller_state.h  motor_types.h  shooter_types.h  system_config.h
micro_ros_raspberrypi_pico_sdk/lib/imu-driver/ICM-20948/: ICM20948Adapter.cpp
micro_ros_raspberrypi_pico_sdk/scripts/: arm-none-eabi-ld-wrapper.cmd
micro_ros_raspberrypi_pico_sdk/specs/002-feat-humble-implement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
micro_ros_raspberrypi_pico_sdk/specs/002-feat-humble-implement/contracts/: micro-ros-contracts.md
micro_ros_raspberrypi_pico_sdk/src/application/: main.cpp  shooter_control.cpp  watchdog_manager.cpp
micro_ros_raspberrypi_pico_sdk/src/hardware/: ImuLib_cfg.cpp  UartLib.cpp  bsp.cpp  motors.cpp  quadrature_encoder.pio
micro_ros_raspberrypi_pico_sdk/src/middleware/: command_processor.cpp  control_loop.cpp  micro_ros_cfg.cpp  queue_wrapper.cpp  usb_interface.cpp
micro_ros_raspberrypi_pico_sdk/tests/: CMakeLists.txt
micro_ros_raspberrypi_pico_sdk/tests/contract/: test_battery_state.cpp  test_cmd_vel.cpp  test_command_processor_host.cpp  test_encoder_ticks  test_encoder_ticks.cpp  test_hal_interface.md  test_imu_data_raw.cpp  test_launcher_control.cpp  test_launcher_fire.cpp  test_micro_ros_cfg_host.cpp  test_motors_cmd  test_motors_cmd.cpp  test_motors_response  test_motors_response.cpp  test_nerf_servo_cmd  test_nerf_servo_cmd.cpp  test_odom.cpp  test_tof_sensor.cpp
micro_ros_raspberrypi_pico_sdk/tests/hardware/: smoke_test_procedures.md
micro_ros_raspberrypi_pico_sdk/tests/host_stubs/: ImuLib_cfg.h  bsp.h  hardware_cfg.h  host_globals.cpp  micro_ros_arduino.h
micro_ros_raspberrypi_pico_sdk/tests/integration/: test_build  test_build.cpp  test_data_persistence.md  test_flashing  test_flashing.cpp  test_launcher_control.md  test_logging.md  test_motor_control.md  test_out_of_scope.md  test_ros2_basic_communication  test_ros2_basic_communication.cpp  test_safety_features.md  test_sensor_failure.md  test_sensor_publishing.md  test_shooter_control.md  test_watchdog_safety.md
src/: Agent.h  BaseMotorsAgent.h  CMakeLists.txt  DDD.cpp  DDD.h  HCSR04Agent.cpp  MotorMgr.h  MotorsAgent.cpp  MotorsAgent.h  PubEntities.cpp  PubEntities.h  RobotController.cpp  RobotController.h  STM32FreeRTOSConfig.h  TB6612MotorMgr.h  TB6612MotorPID.cpp  TB6612MotorPID.h  TB6612MotorsAgent.cpp  TB6612MotorsAgent.h  dummy.cpp  dummy.h  main.cpp  pico_usb_transport.c  pico_usb_transports.cpp  pico_usb_transports.hpp  uRosBridge.cpp  uRosBridge.h  uRosBridge_enhanced_sync.cpp.backup  uRosEntities.cpp
src/application/: BaseMotorsAgentInterface.h  ImuAgent.cpp  ImuAgent.h  MotorsAgent.cpp  MotorsAgent.h  RobotController.cpp  RobotController.h  TB6612MotorsAgent.h  vl6180xAgent.cpp  vl6180xAgent.hpp
src/config/: FirmwareConfig.h
src/hal/: GPIOObserver.h
src/hal/hardware/: Icm20948.cpp  Icm20948Simple.cpp  Icm20948Simple.hpp
src/shared/: Vector3f.hpp
tests/: CMakeLists.txt  CMakePresets.json  README.md  test_basic_math.cpp  test_hal_mocks.cpp  test_main.cpp  test_mecanum_kinematics.cpp  test_motor_pid.cpp  test_tb6612_motor_pid.cpp  test_topic_names.cpp  tests1.cpp
tests/contract/: test_usb_cdc_protocol.md
tests/hal/: CMakeLists.txt
tests/hal/interfaces/: IGPIOInterface.hpp  II2CInterface.hpp
tests/hal/mocks/: GPIOMock.cpp  GPIOMock.hpp  I2CMock.cpp  I2CMock.hpp
tests/hal/pico/: GPIOPico.cpp  GPIOPico.hpp  I2CPico.cpp  I2CPico.hpp
tests/hardware/: smoke_test_procedures.md
tests/integration/: CMakeLists.txt  test_motor_commands.md  test_odometry.cpp  test_topic_names.cpp
tests/mocks/: CMakeLists.txt  mock_motor_mgr.cpp  mock_motor_mgr.h  mock_tb6612_motor_mgr.cpp  mock_tb6612_motor_mgr.h
tests/mocks/pico/: stdlib.h
tests/unit/: CMakeLists.txt  test_motor_pid.cpp  test_tb6612_motor_pid.cpp
(+170 files in other folders)
